--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,10 @@
   --gray-color-1: #333333;
   --gray-color-2: #4e5150;
   --gray-color-3: #4f4f4f;
-  --gray-color-3: #828282;
+  --gray-color-4: #828282;
+  --gray-color-5: #e0e0e0;
+  --gray-color-6: #f2f2f2;
+  --gray-color-7: #bdbdbd;
 
   --primary-color: #f2994a;
 
@@ -22,5 +25,274 @@ html {
 }
 
 body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
   box-sizing: border-box;
+  padding: 0 30rem 0 20rem;
+}
+
+input {
+  outline: none;
+}
+
+a {
+  text-decoration: none;
+  color: var(--gray-color-7);
+}
+
+.header {
+  padding: 6.4rem 0 5rem;
+}
+
+.heading-primary {
+  font-size: 3.6rem;
+  line-height: 1.22;
+  color: var(--gray-color-2);
+}
+
+.main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 16rem;
+}
+
+.heading-secondary {
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.2;
+  color: var(--gray-color-1);
+  margin-bottom: 1.6rem;
+}
+
+.contact-mess-box {
+  max-width: 60%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 2rem;
+}
+
+.label-text {
+  font-size: 1.2rem;
+  line-height: 1.25;
+  color: var(--gray-color-3);
+  margin-bottom: 0.6rem;
+}
+
+.input {
+  max-width: 100%;
+  height: 5.6rem;
+  border: 1px solid var(--gray-color-4);
+  border-radius: 12px;
+}
+
+.input::placeholder {
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.25;
+  padding-left: 5.2rem;
+}
+
+.icon {
+  display: inline-block;
+  font-size: 2.5rem;
+  position: absolute;
+  top: 48%;
+  left: 2%;
+}
+.special-box {
+  max-width: 60%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 4rem;
+}
+
+.contact-mess-smaller-box {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 2rem;
+}
+
+.checkmess {
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.25;
+  color: var(--gray-color-3);
+}
+.checkout-box-3 {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 2.3rem;
+}
+
+input[type="checkbox"] {
+  width: 2.1rem;
+  height: 2.1rem;
+}
+
+.btn-box {
+  padding-left: 32rem;
+}
+
+.btn {
+  width: 16.6rem;
+  height: 5.4rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.25;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border-radius: 12px;
+  border: 0;
+}
+.good-detail-box {
+  max-width: 45%;
+  padding: 3rem 4.4rem 1.4rem 2.4rem;
+  background-color: var(--gray-color-6);
+  border-radius: 12px;
+}
+
+.good-detail {
+  display: flex;
+  gap: 1rem;
+  white-space: nowrap;
+  margin-bottom: 3rem;
+}
+
+.good-img {
+  width: 100%;
+  border-radius: 12px;
+}
+
+.good-name,
+.dis-price {
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.25;
+  color: var(--gray-color-2);
+}
+.dis-price {
+  color: var(--primary-color);
+}
+.pre-price {
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.25;
+  text-decoration: line-through;
+}
+
+.good-total {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.good-num-box {
+  position: relative;
+}
+
+.good-num {
+  width: 13.5rem;
+  height: 5.2rem;
+  border-radius: 12px;
+  border: 1px solid var(--gray-color-4);
+  text-align: center;
+  line-height: 5.2rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+  align-self: flex-start;
+}
+
+.good-num::before {
+  content: "-";
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2rem;
+  position: absolute;
+  top: 55%;
+  left: 8%;
+  background-color: var(--gray-color-5);
+  border-radius: 4px;
+  transform: translateY(-50%);
+  color: var(--gray-color-4);
+}
+
+.good-num::after {
+  content: "+";
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2rem;
+  position: absolute;
+  top: 55%;
+  right: 10%;
+  background-color: var(--gray-color-5);
+  border-radius: 4px;
+  transform: translateY(-50%);
+  color: var(--gray-color-4);
+}
+
+.price-shipping-box span:nth-child(1),
+.price-count-box span:nth-child(1) {
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.price-shipping-box span:nth-child(2),
+.price-count-box span:nth-child(2) {
+  font-size: 1.4rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.price-shipping-box,
+.price-count-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 0;
+  border-top: 1px solid var(--gray-color-7);
+}
+.footer {
+  height: 5.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-text {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  color: var(--gray-color-3);
+}
+
+@media (max-width: 23.44em) {
+  html {
+    font-size: 50%;
+  }
+  body {
+    padding: 0 1.2rem;
+  }
+
+  .main {
+    grid-template-columns: 1fr;
+    margin-bottom: 6rem;
+  }
+
+  .btn-box {
+    padding-left: 25rem;
+  }
+
+  .checkout-box {
+    order: 1;
+  }
+
+  .good-detail-box {
+    max-width: 100%;
+    margin-bottom: 4rem;
+  }
 }
